--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -101,6 +101,7 @@
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
                 android:visibility="gone"
+                app:layout_constraintTop_toBottomOf="@id/layoutPromotions"
                 tools:visibility="visible">
 
                 <androidx.appcompat.widget.AppCompatTextView
