--- a/app/src/main/res/layout/view_item_product.xml
+++ b/app/src/main/res/layout/view_item_product.xml
@@ -21,6 +21,22 @@
             tools:src="@tools:sample/backgrounds/scenic"/>
 
         <androidx.appcompat.widget.AppCompatTextView
+            android:id="@+id/tvDiscountPercent"
+            android:layout_width="wrap_content"
+            android:layout_height="0dp"
+            android:layout_marginTop="@dimen/margin_small"
+            android:layout_marginEnd="@dimen/margin_small"
+            android:padding="@dimen/margin_extra_small"
+            android:gravity="center"
+            android:background="@drawable/bg_discount"
+            android:rotation="-15"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintDimensionRatio="1:1"
+            style="@style/Typography.PassionWoman.TextAppearance.Small"
+            tools:text="-20%"/>
+
+        <androidx.appcompat.widget.AppCompatTextView
             android:id="@+id/tvPrice"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
