--- a/app/src/main/res/values/ids.xml
+++ b/app/src/main/res/values/ids.xml
@@ -3,4 +3,5 @@
     <item name="errorView" type="id"/>
     <item name="mockView" type="id"/>
     <item name="progressView" type="id"/>
+    <item name="contentInsetsView" type="id"/>
 </resources>
