--- a/app/src/main/res/layout/fragment_product_card.xml
+++ b/app/src/main/res/layout/fragment_product_card.xml
@@ -3,6 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@id/contentInsetsView"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -115,10 +116,8 @@
                 android:layout_marginTop="@dimen/margin_default"
                 android:layout_marginStart="@dimen/margin_default"
                 android:max="5"
-                android:stepSize="0.5"
                 app:layout_constraintTop_toBottomOf="@id/layoutPhotos"
                 app:layout_constraintStart_toStartOf="parent"
-                style="?android:attr/ratingBarStyleSmall"
                 tools:progress="4"/>
 
             <androidx.appcompat.widget.AppCompatTextView
