--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -13,6 +13,10 @@
         <item name="colorOnSecondary">@color/onSecondary</item>
         <!-- Status bar color. -->
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
+        <item name="android:navigationBarColor">?attr/colorPrimaryVariant</item>
+
+        <item name="android:windowTranslucentStatus">true</item>
+        <item name="android:windowTranslucentNavigation">true</item>
 
         <item name="android:windowBackground">@color/background</item>
         <item name="android:textViewStyle">@style/Theme.PassionWoman.TextView</item>
@@ -25,6 +29,7 @@
         <item name="outlineButtonStyle">@style/Theme.PassionWoman.Button.Outline</item>
         <item name="switchStyle">@style/Theme.PassionWoman.Switch</item>
         <item name="radioButtonStyle">@style/Theme.PassionWoman.RadioButton</item>
+        <item name="ratingBarStyle">@style/Theme.PassionWoman.RatingBar</item>
     </style>
 
     <style name="Theme.PassionWoman.TextView" parent="Widget.MaterialComponents.TextView">
@@ -106,7 +111,14 @@
         <item name="android:windowBackground">@android:color/transparent</item>
         <item name="android:windowIsFloating">false</item>
         <item name="android:statusBarColor">@android:color/transparent</item>
+        <item name="android:navigationBarColor">@color/primaryVariant</item>
         <item name="android:windowAnimationStyle">@style/Animation.PassionWoman.BottomSheetDialog</item>
         <item name="radioButtonStyle">@style/Theme.PassionWoman.RadioButton</item>
+    </style>
+
+    <style name="Theme.PassionWoman.RatingBar" parent="Widget.AppCompat.RatingBar.Small">
+        <item name="android:stepSize">0.1</item>
+        <item name="android:progressTint">@color/secondary</item>
+        <item name="android:progressBackgroundTint">@color/hint</item>
     </style>
 </resources>
