--- a/app/src/main/res/layout/view_item_product.xml
+++ b/app/src/main/res/layout/view_item_product.xml
@@ -52,16 +52,13 @@
 
         <androidx.appcompat.widget.AppCompatTextView
             android:id="@+id/tvName"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/margin_extra_small"
             android:layout_marginHorizontal="@dimen/margin_default"
             android:lines="2"
             android:ellipsize="end"
             app:layout_constraintTop_toBottomOf="@id/tvPrice"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0"
             tools:text="@tools:sample/lorem" />
 
         <androidx.appcompat.widget.AppCompatRatingBar
