Added local favorites and synchronization

--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -8,6 +8,8 @@
         <attr name="android:textAlignment"/>
         <attr name="tv_actionStartVisible" format="boolean"/>
         <attr name="tv_actionEndVisible" format="boolean"/>
+        <attr name="tv_actionStartTint" format="color"/>
+        <attr name="tv_actionEndTint" format="color"/>
     </declare-styleable>
 
     <declare-styleable name="LinearMockView">
