--- a/app/src/main/res/layout/fragment_product_card.xml
+++ b/app/src/main/res/layout/fragment_product_card.xml
@@ -1,177 +1,202 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView
+<FrameLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:fillViewport="true">
-    <androidx.constraintlayout.widget.ConstraintLayout
+    android:layout_height="match_parent">
+
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-
-        <FrameLayout
-            android:id="@+id/layoutPhotos"
+        android:layout_height="match_parent"
+        android:fillViewport="true">
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/content"
             android:layout_width="match_parent"
-            android:layout_height="0dp"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintDimensionRatio="3:4">
+            android:layout_height="wrap_content"
+            android:visibility="gone"
+            tools:visibility="visible">
 
-            <androidx.viewpager2.widget.ViewPager2
-                android:id="@+id/vpPhotos"
+            <FrameLayout
+                android:id="@+id/layoutPhotos"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                tools:background="@color/primaryVariant"/>
+                android:layout_height="0dp"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintDimensionRatio="3:4">
 
-            <me.relex.circleindicator.CircleIndicator3
-                android:id="@+id/pageIndicator"
+                <androidx.viewpager2.widget.ViewPager2
+                    android:id="@+id/vpPhotos"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    tools:background="@color/primaryVariant"/>
+
+                <me.relex.circleindicator.CircleIndicator3
+                    android:id="@+id/pageIndicator"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="bottom"
+                    android:paddingBottom="@dimen/margin_default"
+                    app:ci_animator="@animator/circle_indicator_animator"
+                    app:ci_gravity="center"
+                    app:ci_drawable="@drawable/circle_indicator_dot"
+                    app:ci_drawable_unselected="@drawable/circle_indicator_dot_unselected"
+                    app:ci_height="8dp"
+                    app:ci_width="8dp"
+                    app:ci_margin="@dimen/margin_extra_small" />
+
+                <!-- TODO: replace with EmptyView -->
+                <androidx.constraintlayout.widget.ConstraintLayout
+                    android:id="@+id/layoutEmpty"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:background="@color/primaryVariant"
+                    android:visibility="gone"
+                    tools:visibility="visible">
+
+                    <androidx.appcompat.widget.AppCompatImageView
+                        android:id="@+id/ivEmptyIcon"
+                        android:layout_width="50dp"
+                        android:layout_height="50dp"
+                        android:tint="@color/secondary"
+                        app:srcCompat="@drawable/ic_no_photos"
+                        app:layout_constraintTop_toTopOf="parent"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintBottom_toTopOf="@id/tvEmptyPhotos"
+                        app:layout_constraintVertical_chainStyle="packed"/>
+
+                    <androidx.appcompat.widget.AppCompatTextView
+                        android:id="@+id/tvEmptyPhotos"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="@dimen/margin_default"
+                        android:text="@string/product_card_empty_photos"
+                        android:textAlignment="center"
+                        app:layout_constraintTop_toBottomOf="@id/ivEmptyIcon"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintEnd_toEndOf="parent" />
+                </androidx.constraintlayout.widget.ConstraintLayout>
+            </FrameLayout>
+
+            <ru.babaetskv.passionwoman.app.presentation.view.ToolbarView
+                android:id="@+id/toolbar"
+                android:layout_width="match_parent"
+                android:layout_height="?android:attr/actionBarSize"
+                app:tv_title=""
+                app:tv_actionStartVisible="true"
+                app:tv_actionStartSrc="@drawable/ic_back"
+                app:tv_actionEndVisible="true"
+                app:tv_actionEndSrc="@drawable/ic_favorites"
+                app:tv_actionEndTint="@color/favorite"
+                app:layout_constraintTop_toTopOf="parent"/>
+
+            <androidx.appcompat.widget.AppCompatTextView
+                android:id="@+id/tvDiscountPercent"
+                android:layout_width="wrap_content"
+                android:layout_height="0dp"
+                android:layout_marginTop="@dimen/margin_default"
+                android:layout_marginEnd="@dimen/margin_default"
+                android:padding="@dimen/margin_extra_small"
+                android:gravity="center"
+                android:background="@drawable/bg_discount"
+                android:rotation="-15"
+                android:visibility="gone"
+                app:layout_constraintTop_toBottomOf="@id/layoutPhotos"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintDimensionRatio="1:1"
+                tools:text="-20%"
+                tools:visibility="visible"/>
+
+            <androidx.appcompat.widget.AppCompatRatingBar
+                android:id="@+id/ratingBar"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/margin_default"
+                android:layout_marginStart="@dimen/margin_default"
+                android:max="5"
+                android:stepSize="0.5"
+                app:layout_constraintTop_toBottomOf="@id/layoutPhotos"
+                app:layout_constraintStart_toStartOf="parent"
+                style="?android:attr/ratingBarStyleSmall"
+                tools:progress="4"/>
+
+            <androidx.appcompat.widget.AppCompatTextView
+                android:id="@+id/tvProductName"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/margin_small"
+                android:layout_marginHorizontal="@dimen/margin_default"
+                android:textSize="22sp"
+                app:layout_constraintTop_toBottomOf="@id/ratingBar"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toStartOf="@id/tvDiscountPercent"
+                app:layout_goneMarginTop="@dimen/margin_default"
+                tools:text="@tools:sample/lorem" />
+
+            <androidx.appcompat.widget.AppCompatTextView
+                android:id="@+id/tvPrice"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/margin_small"
+                android:layout_marginHorizontal="@dimen/margin_default"
+                android:textSize="26sp"
+                app:layout_constraintTop_toBottomOf="@id/tvProductName"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                tools:text="$60" />
+
+            <androidx.appcompat.widget.AppCompatTextView
+                android:id="@+id/tvColors"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/margin_default"
+                android:layout_marginStart="@dimen/margin_default"
+                android:text="@string/product_card_color_placeholder"
+                app:layout_constraintTop_toBottomOf="@id/tvPrice"
+                app:layout_constraintStart_toStartOf="parent"/>
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/rvColors"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_gravity="bottom"
-                android:paddingBottom="@dimen/margin_default"
-                app:ci_animator="@animator/circle_indicator_animator"
-                app:ci_gravity="center"
-                app:ci_drawable="@drawable/circle_indicator_dot"
-                app:ci_drawable_unselected="@drawable/circle_indicator_dot_unselected"
-                app:ci_height="8dp"
-                app:ci_width="8dp"
-                app:ci_margin="@dimen/margin_extra_small" />
+                android:layout_marginTop="@dimen/margin_small"
+                android:paddingHorizontal="@dimen/margin_small"
+                android:clipToPadding="false"
+                android:orientation="horizontal"
+                app:layout_constraintTop_toBottomOf="@id/tvColors"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+                tools:itemCount="3"
+                tools:listitem="@layout/view_item_product_color"/>
 
-            <!-- TODO: replace with EmptyView -->
-            <androidx.constraintlayout.widget.ConstraintLayout
-                android:id="@+id/layoutEmpty"
+            <com.google.android.material.button.MaterialButton
+                android:id="@+id/btnAddToCart"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:background="@color/primaryVariant"
-                android:visibility="gone"
-                tools:visibility="visible">
+                android:layout_height="wrap_content"
+                android:layout_marginVertical="@dimen/margin_default"
+                android:layout_marginHorizontal="@dimen/margin_default"
+                android:text="@string/product_card_add_to_cart"
+                app:layout_constraintTop_toBottomOf="@id/rvColors"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintVertical_bias="0"
+                style="@style/Theme.PassionWoman.Button.Colored"/>
+        </androidx.constraintlayout.widget.ConstraintLayout>
+    </ScrollView>
 
-                <androidx.appcompat.widget.AppCompatImageView
-                    android:id="@+id/ivEmptyIcon"
-                    android:layout_width="50dp"
-                    android:layout_height="50dp"
-                    android:tint="@color/secondary"
-                    app:srcCompat="@drawable/ic_no_photos"
-                    app:layout_constraintTop_toTopOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintBottom_toTopOf="@id/tvEmptyPhotos"
-                    app:layout_constraintVertical_chainStyle="packed"/>
+    <ru.babaetskv.passionwoman.app.presentation.view.ProgressView
+        android:id="@id/progressView"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:visibility="gone"
+        tools:visibility="visible"/>
 
-                <androidx.appcompat.widget.AppCompatTextView
-                    android:id="@+id/tvEmptyPhotos"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="@dimen/margin_default"
-                    android:text="@string/product_card_empty_photos"
-                    android:textAlignment="center"
-                    app:layout_constraintTop_toBottomOf="@id/ivEmptyIcon"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintEnd_toEndOf="parent" />
-            </androidx.constraintlayout.widget.ConstraintLayout>
-        </FrameLayout>
-
-        <ru.babaetskv.passionwoman.app.presentation.view.ToolbarView
-            android:id="@+id/toolbar"
-            android:layout_width="match_parent"
-            android:layout_height="?android:attr/actionBarSize"
-            app:tv_title=""
-            app:tv_actionStartVisible="true"
-            app:tv_actionStartSrc="@drawable/ic_back"
-            app:tv_actionEndVisible="true"
-            app:tv_actionEndSrc="@drawable/ic_favorites"
-            app:layout_constraintTop_toTopOf="parent"/>
-
-        <androidx.appcompat.widget.AppCompatTextView
-            android:id="@+id/tvDiscountPercent"
-            android:layout_width="wrap_content"
-            android:layout_height="0dp"
-            android:layout_marginTop="@dimen/margin_default"
-            android:layout_marginEnd="@dimen/margin_default"
-            android:padding="@dimen/margin_extra_small"
-            android:gravity="center"
-            android:background="@drawable/bg_discount"
-            android:rotation="-15"
-            android:visibility="gone"
-            app:layout_constraintTop_toBottomOf="@id/layoutPhotos"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintDimensionRatio="1:1"
-            tools:text="-20%"
-            tools:visibility="visible"/>
-
-        <androidx.appcompat.widget.AppCompatRatingBar
-            android:id="@+id/ratingBar"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/margin_default"
-            android:layout_marginStart="@dimen/margin_default"
-            android:max="5"
-            android:stepSize="0.5"
-            app:layout_constraintTop_toBottomOf="@id/layoutPhotos"
-            app:layout_constraintStart_toStartOf="parent"
-            style="?android:attr/ratingBarStyleSmall"
-            tools:progress="4"/>
-
-        <androidx.appcompat.widget.AppCompatTextView
-            android:id="@+id/tvProductName"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/margin_small"
-            android:layout_marginHorizontal="@dimen/margin_default"
-            android:textSize="22sp"
-            app:layout_constraintTop_toBottomOf="@id/ratingBar"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toStartOf="@id/tvDiscountPercent"
-            app:layout_goneMarginTop="@dimen/margin_default"
-            tools:text="@tools:sample/lorem" />
-
-        <androidx.appcompat.widget.AppCompatTextView
-            android:id="@+id/tvPrice"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/margin_small"
-            android:layout_marginHorizontal="@dimen/margin_default"
-            android:textSize="26sp"
-            app:layout_constraintTop_toBottomOf="@id/tvProductName"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            tools:text="$60" />
-
-        <androidx.appcompat.widget.AppCompatTextView
-            android:id="@+id/tvColors"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/margin_default"
-            android:layout_marginStart="@dimen/margin_default"
-            android:text="@string/product_card_color_placeholder"
-            app:layout_constraintTop_toBottomOf="@id/tvPrice"
-            app:layout_constraintStart_toStartOf="parent"/>
-
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/rvColors"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/margin_small"
-            android:paddingHorizontal="@dimen/margin_small"
-            android:clipToPadding="false"
-            android:orientation="horizontal"
-            app:layout_constraintTop_toBottomOf="@id/tvColors"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-            tools:itemCount="3"
-            tools:listitem="@layout/view_item_product_color"/>
-
-        <com.google.android.material.button.MaterialButton
-            android:id="@+id/btnAddToCart"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginVertical="@dimen/margin_default"
-            android:layout_marginHorizontal="@dimen/margin_default"
-            android:text="@string/product_card_add_to_cart"
-            app:layout_constraintTop_toBottomOf="@id/rvColors"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintVertical_bias="0"
-            style="@style/Theme.PassionWoman.Button.Colored"/>
-    </androidx.constraintlayout.widget.ConstraintLayout>
-</ScrollView>
+    <ru.babaetskv.passionwoman.app.presentation.view.ErrorView
+        android:id="@id/errorView"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:visibility="gone"
+        app:ev_action="@string/retry"
+        app:ev_isActionVisible="true"
+        app:ev_isBackVisible="true" />
+</FrameLayout>
