--- a/app/src/main/res/layout/view_item_product.xml
+++ b/app/src/main/res/layout/view_item_product.xml
@@ -29,6 +29,7 @@
             android:padding="@dimen/margin_extra_small"
             android:gravity="center"
             android:background="@drawable/bg_discount"
+            android:textColor="@color/onSecondary"
             android:rotation="-15"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
@@ -41,13 +42,29 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/margin_small"
-            android:layout_marginHorizontal="@dimen/margin_default"
+            android:layout_marginStart="@dimen/margin_default"
             android:lines="1"
             android:ellipsize="end"
+            app:layout_constraintHorizontal_bias="0"
+            app:layout_constraintHorizontal_chainStyle="packed"
             app:layout_constraintTop_toBottomOf="@id/ivPreview"
             app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toStartOf="@id/tvPriceDeleted"
+            tools:text="$60.00" />
+
+        <androidx.appcompat.widget.AppCompatTextView
+            android:id="@+id/tvPriceDeleted"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/margin_small"
+            android:layout_marginStart="@dimen/margin_small"
+            android:layout_marginEnd="@dimen/margin_default"
+            android:lines="1"
+            android:ellipsize="end"
+            android:textColor="@color/hint"
+            app:layout_constraintTop_toBottomOf="@id/ivPreview"
+            app:layout_constraintStart_toEndOf="@id/tvPrice"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0"
             tools:text="$60.00" />
 
         <androidx.appcompat.widget.AppCompatTextView
