--- a/app/src/main/res/drawable/bg_input.xml
+++ b/app/src/main/res/drawable/bg_input.xml
@@ -2,6 +2,6 @@
 <shape
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
-    <solid android:color="#3fff"/>
+    <solid android:color="@color/input"/>
     <corners android:radius="@dimen/corners_default"/>
 </shape>
