--- a/app/src/main/res/layout/view_item_category.xml
+++ b/app/src/main/res/layout/view_item_category.xml
@@ -15,6 +15,7 @@
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:scaleType="centerCrop"
+            android:foreground="@color/category_shade"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintDimensionRatio="3:2"
             tools:src="@tools:sample/backgrounds/scenic"/>
