--- a/app/src/main/res/layout/view_progress.xml
+++ b/app/src/main/res/layout/view_progress.xml
@@ -11,5 +11,6 @@
         android:layout_height="match_parent"
         android:scaleType="centerInside"
         android:layout_gravity="center"
+        app:tint="@color/secondary"
         app:srcCompat="@drawable/ic_launcher_foreground"/>
 </FrameLayout>
