--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -18,11 +18,11 @@
         <attr name="android:background"/>
     </declare-styleable>
 
-    <declare-styleable name="ErrorView">
-        <attr name="ev_isBackVisible" format="boolean"/>
-        <attr name="ev_isActionVisible" format="boolean"/>
-        <attr name="ev_message" format="string"/>
-        <attr name="ev_action" format="string"/>
+    <declare-styleable name="StubView">
+        <attr name="sv_isBackVisible" format="boolean"/>
+        <attr name="sv_isActionVisible" format="boolean"/>
+        <attr name="sv_message" format="string"/>
+        <attr name="sv_action" format="string"/>
     </declare-styleable>
 
     <declare-styleable name="ColorView">
