--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -29,15 +29,15 @@
             app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
     </androidx.core.widget.NestedScrollView>
 
-    <ru.babaetskv.passionwoman.app.presentation.view.ErrorView
-        android:id="@id/errorView"
+    <ru.babaetskv.passionwoman.app.presentation.view.StubView
+        android:id="@id/emptyView"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:visibility="gone"
         app:layout_constraintTop_toBottomOf="@id/toolbar"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:ev_action="@string/retry"
-        app:ev_isBackVisible="false" />
+        app:sv_action="@string/retry"
+        app:sv_isBackVisible="false" />
 
     <!-- TODO: think about replacement with mock view -->
     <ru.babaetskv.passionwoman.app.presentation.view.ProgressView
