--- a/app/src/main/res/layout/fragment_product_card.xml
+++ b/app/src/main/res/layout/fragment_product_card.xml
@@ -162,6 +162,18 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 tools:text="$60" />
 
+            <include
+                android:id="@+id/layoutBrand"
+                android:layout_width="64dp"
+                android:layout_height="64dp"
+                android:layout_marginTop="@dimen/margin_default"
+                android:layout_marginStart="@dimen/margin_default"
+                android:visibility="gone"
+                app:layout_constraintTop_toBottomOf="@id/tvPrice"
+                app:layout_constraintStart_toStartOf="parent"
+                layout="@layout/view_item_brand"
+                tools:visibility="visible"/>
+
             <androidx.appcompat.widget.AppCompatTextView
                 android:id="@+id/tvColors"
                 android:layout_width="wrap_content"
@@ -169,7 +181,7 @@
                 android:layout_marginTop="@dimen/margin_default"
                 android:layout_marginStart="@dimen/margin_default"
                 android:text="@string/product_card_color_placeholder"
-                app:layout_constraintTop_toBottomOf="@id/tvPrice"
+                app:layout_constraintTop_toBottomOf="@id/layoutBrand"
                 app:layout_constraintStart_toStartOf="parent"/>
 
             <androidx.recyclerview.widget.RecyclerView
