--- a/app/src/main/res/layout/fragment_catalog.xml
+++ b/app/src/main/res/layout/fragment_catalog.xml
@@ -32,7 +32,7 @@
         tools:listitem="@layout/view_item_category"/>
 
     <ru.babaetskv.passionwoman.app.presentation.view.StubView
-        android:id="@id/emptyView"
+        android:id="@id/errorView"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:visibility="gone"
