--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -30,7 +30,7 @@
     </androidx.core.widget.NestedScrollView>
 
     <ru.babaetskv.passionwoman.app.presentation.view.StubView
-        android:id="@id/emptyView"
+        android:id="@id/errorView"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:visibility="gone"
