--- a/app/src/main/res/layout/fragment_product_list.xml
+++ b/app/src/main/res/layout/fragment_product_list.xml
@@ -62,7 +62,7 @@
         tools:listitem="@layout/view_item_product"/>
 
     <ru.babaetskv.passionwoman.app.presentation.view.StubView
-        android:id="@id/emptyView"
+        android:id="@id/errorView"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:visibility="gone"
