--- a/app/src/main/res/color/item_size_color_selector.xml
+++ b/app/src/main/res/color/item_size_color_selector.xml
@@ -1,8 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <item android:state_enabled="false"
+    <item
+        android:state_enabled="false"
         android:color="@color/primaryVariant"  />
 
-    <item android:color="@color/secondaryVariant" />
+    <item
+        android:state_selected="false"
+        android:color="@color/hint" />
+
+    <item android:color="@color/secondary"/>
 </selector>
