--- a/app/src/main/res/layout/view_item_product_size.xml
+++ b/app/src/main/res/layout/view_item_product_size.xml
@@ -1,21 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.google.android.material.button.MaterialButton
+<androidx.appcompat.widget.AppCompatTextView
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/btnSize"
+    android:id="@+id/tvSize"
     android:layout_width="48dp"
     android:layout_height="48dp"
-    android:insetTop="0dp"
-    android:insetBottom="0dp"
-    android:clickable="false"
-    android:focusable="false"
+    android:background="@drawable/bg_product_size"
     android:textColor="@color/item_size_color_selector"
-    android:strokeColor="@color/item_size_color_selector"
     android:padding="0dp"
     android:textSize="14sp"
-    app:layout_constraintDimensionRatio="1:1"
-    app:layout_constraintTop_toTopOf="parent"
-    app:layout_constraintStart_toStartOf="parent"
-    style="@style/Theme.PassionWoman.Button.Outline"
+    android:gravity="center"
+    android:enabled="false"
     tools:text="XXXL" />
